# rust-embd-template

./: Cargo.toml  diagram.json  memory.x  pico-blinky.uf2  wokwi.toml
.cargo/: config.toml
src/: main.rs
