[package]
name = "pico-blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
panic-halt = "0.2"
fugit = "0.3"

[profile.dev]
codegen-units = 1
debug = 2
lto = false
opt-level = 1
panic = "abort"

[profile.release]
codegen-units = 1
debug = 2
lto = true
opt-level = "z"
panic = "abort"